fix: get price and list licences overflow

--- a/src/pages/mail/mailPage.css
+++ b/src/pages/mail/mailPage.css
@@ -68,10 +68,10 @@
   border-radius: var(--radius-button);
   filter: drop-shadow(0px 4px 3px rgb(0 0 0 / 0.3));
   height: 100%;
-  overflow: auto;
+  /* overflow: auto; */
 }
 .mail-messages-container {
-  overflow-y: auto;
+  /* overflow-y: auto; */
   margin: 0 0.3rem;
   height: 100%;
 }
@@ -82,7 +82,7 @@
   font-size: 0.8rem;
 }
 .message-container-header {
-  position: sticky;
+  /* position: sticky; */
   top: 0;
   display: flex;
   flex-direction: column;
@@ -201,4 +201,8 @@
 }
 .mail-license:hover {
   text-decoration: underline;
+}
+.mail-grid-container {
+  overflow-y: auto;
+  height: 80%;
 }
